--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -42,7 +42,6 @@
     "@types/lodash-es": "^4.17.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "eslint-plugin-react-you-might-not-need-an-effect": "^0.7.0",
     "filesize": "^11.0.13",
@@ -61,9 +60,7 @@
     "react-tweet": "^3.2.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13",
-    "tone": "^15.1.22",
-    "uuid": "^13.0.0"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
