--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sharkord/server",
   "version": "0.0.0",
-  "module": "/src/index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "private": true,
   "scripts": {
