--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "format": "bun run --filter '*' format",
     "check-types": "bun run --filter '*' check-types",
     "lint": "bun run --filter '*' lint",
+    "knip": "knip",
+    "knip:production": "knip --production",
     "magic": "bun run format && bun run check-types && bun run lint"
+  },
+  "devDependencies": {
+    "knip": "^5.80.0"
   }
 }
