--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-you-might-not-need-an-effect": "^0.7.0",
     "filesize": "^11.0.13",
     "html-react-parser": "^5.2.6",
+    "i18next": "^25.5.3",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.544.0",
     "mediasoup-client": "^3.18.0",
@@ -55,6 +56,7 @@
     "react-colorful": "^5.6.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.0.1",
     "react-lite-youtube-embed": "^2.5.6",
     "react-redux": "^9.2.0",
     "react-tweet": "^3.2.2",
