--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
-    "types": ["bun-types"],
+    "types": ["bun"],
 
     // Bundler mode
     "moduleResolution": "bundler",
