feat: Add WebRTC port multiplexing with configurable announced host
Implement MediaSoup's webRtcServer for single UDP port operation, replacing
the previous port range mode (40000-40020) with port 7882 multiplexing by
default. Port 7882 is the industry standard for WebRTC servers (used by
LiveKit, Jitsi, etc). This simplifies deployments, especially in containerized
environments like Kubernetes, while maintaining backward compatibility.

Changes:
- Add webRtcServer initialization with automatic mode detection
  (multiplexed when rtcMinPort == rtcMaxPort, port range otherwise)
- Default to port 7882 (industry standard) instead of 40000-40020 range
- Add SHARKORD_WEBRTC_HOST environment variable for custom announced address
  (supports IPs or domains for K8s LoadBalancers, NAT configurations, etc)
- Falls back to auto-detected SERVER_PUBLIC_IP if not specified
- Convert defaultRtcTransportOptions to function for proper initialization
- Replace Dockerfile with Debian Slim base (glibc compatibility, uses prebuilt
  MediaSoup binary for faster builds)
- Create Dockerfile.portrange for debugging with port range mode
- Update README.md, docker-compose.yaml, and Dockerfile documentation

Benefits:
- Single UDP port for all WebRTC traffic (simpler firewall rules)
- Unlimited concurrent users per worker
- Easier Kubernetes deployments (single LoadBalancer for WebRTC)
- Faster Docker builds (no MediaSoup compilation needed)
- Backward compatible with port range mode

--- a/docs/docker/docker-compose.yaml
+++ b/docs/docker/docker-compose.yaml
@@ -7,9 +7,10 @@ services:
       # Main HTTP/WebSocket port
       - "4991:4991"
       
-      # WebRTC media ports (UDP) - adjust range if needed
-      # These ports are used for voice/video streaming
-      - "40000-40020:40000-40020/udp"
+      # WebRTC media port (UDP/TCP) - using multiplexed mode
+      # Single port for all voice/video connections
+      - "7882:7882/tcp"
+      - "7882:7882/udp"
     
     # Can override config file settings
     environment:
@@ -18,9 +19,13 @@ services:
       SHARKORD_PORT: "4991"
       SHARKORD_DEBUG: "false"
       
-      # Mediasoup/Voice configuration
-      SHARKORD_RTC_MIN_PORT: "40000"
-      SHARKORD_RTC_MAX_PORT: "40020"
+      # Mediasoup/Voice configuration (multiplexed mode)
+      SHARKORD_RTC_MIN_PORT: "7882"
+      SHARKORD_RTC_MAX_PORT: "7882"
+      
+      # Optional: Custom WebRTC host/IP for NAT, K8s LoadBalancer, etc
+      # Uncomment and set to override auto-detected public IP
+      # SHARKORD_WEBRTC_HOST: "webrtc.yourdomain.com"
     
     # Volume mounts for persistent data
     volumes:
