--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "magic": "bun run format && bun run check-types && bun run lint"
   },
   "devDependencies": {
-    "@tiptap/pm": "^3.19.0",
-    "@tiptap/suggestion": "^3.19.0",
-    "knip": "^5.80.0",
-    "prosemirror-view": "^1.41.6"
+    "knip": "^5.80.0"
   }
 }
