get nix working for mac

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,22 @@
-nix_direnv_manual_reload
+# Optional helper from nix-direnv, if the integration is installed.
+if type nix_direnv_manual_reload >/dev/null 2>&1; then
+  nix_direnv_manual_reload
+fi
+
+# Direnv executes .envrc in a non-interactive shell; Nix may be installed
+# but missing from PATH in that context.
+if ! command -v nix >/dev/null 2>&1; then
+  for p in /nix/var/nix/profiles/default/bin /nix/profile/bin "$HOME/.nix-profile/bin"; do
+    if [ -x "$p/nix" ]; then
+      PATH="$p:$PATH"
+      break
+    fi
+  done
+fi
+
+if ! command -v nix >/dev/null 2>&1; then
+  echo "direnv: nix binary not found on PATH (looked in /nix/var/nix/profiles/default/bin, /nix/profile/bin, ~/.nix-profile/bin)" >&2
+  return 0
+fi
+
 use flake
