feat: implement OIDC authentication
- Added login and callback routes
- Added automatic user account creation
- Added role and group syncing
- Fixed issuer URL and SSL certificate issues

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -52,6 +52,7 @@
     "link-preview-js": "^3.1.0",
     "linkify-it": "^5.0.0",
     "mediasoup": "^3.19.17",
+    "openid-client": "^6.8.2",
     "queue": "^7.0.0",
     "sanitize-html": "^2.17.0",
     "semver": "^7.7.3",
