--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -45,6 +45,7 @@
     "chalk": "^5.6.2",
     "cron": "^4.4.0",
     "drizzle-orm": "^0.44.5",
+    "file-type": "^21.3.0",
     "ini": "^5.0.0",
     "ipaddr.js": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
@@ -53,6 +54,7 @@
     "queue": "^7.0.0",
     "sanitize-html": "^2.17.0",
     "semver": "^7.7.3",
+    "sharp": "^0.34.5",
     "string-argv": "^0.3.2",
     "systeminformation": "^5.27.11",
     "ua-parser-js": "^2.0.6",
