--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/bun": "^1.3.5",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/ini": "^4.1.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/sanitize-html": "^2.16.0",
@@ -38,6 +39,8 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@sharkord/plugin-sdk": "workspace:*",
     "@sharkord/shared": "workspace:*",
     "@trpc/server": "^11.6.0",
@@ -46,6 +49,7 @@
     "cron": "^4.4.0",
     "drizzle-orm": "^0.44.5",
     "file-type": "^21.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "ini": "^5.0.0",
     "ipaddr.js": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
