--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,29 @@
 name: CI
 
-# on:
-#   pull_request:
-#   push:
-#     branches: [development, main]
-
 on:
+  # push:
+  #   branches: [main, development]
+  # pull_request:
   workflow_dispatch:
 
 jobs:
-  build:
+  ci:
+    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Bun
+      - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.3.5
 
-      - name: Install
+      - name: Install dependencies
         run: bun install
 
-      - name: Format
+      - name: Format check
         run: bun format --check
 
       - name: Lint
@@ -33,7 +32,10 @@ jobs:
       - name: Typecheck
         run: bun check-types
 
-      - name: Build app
-        run: |
-          cd apps/server
-          bun run build
+      - name: Build
+        working-directory: apps/server
+        run: bun run build
+
+      - name: Run tests
+        working-directory: apps/server
+        run: bun test
