--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,17 +13,18 @@
     "magic": "bun --bun run lint:fix && bun --bun run format && bun --bun run check-types"
   },
   "dependencies": {
-    "@sharkord/shared": "workspace:*",
-    "@sharkord/ui": "workspace:*",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/dom": "^1.7.4",
     "@radix-ui/react-avatar": "^1.1.10",
     "@reduxjs/toolkit": "^2.9.0",
+    "@sharkord/shared": "workspace:*",
+    "@sharkord/ui": "workspace:*",
     "@tailwindcss/vite": "^4.1.13",
     "@tiptap/core": "^3.7.2",
     "@tiptap/extension-emoji": "^3.7.2",
+    "@tiptap/extension-link": "^3.20.0",
     "@tiptap/pm": "^3.19.0",
     "@tiptap/react": "^3.7.2",
     "@tiptap/starter-kit": "^3.7.2",
