--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -7,9 +7,9 @@
     "test:e2e": "bunx playwright test",
     "test:ui": "bunx playwright test --ui",
     "test:headed": "bunx playwright test --headed",
-    "format": "prettier --write \"**/*.ts*\" --config ./.prettierrc.json",
-    "lint": "eslint ./src/**/*.ts --ext ts --report-unused-disable-directives",
-    "lint:fix": "eslint ./src/**/*.ts --ext ts --report-unused-disable-directives --fix",
+    "format": "prettier --write \"**/*.*.ts*\" --config ./.prettierrc.json",
+    "lint": "eslint ./tests/**/*.ts --ext ts --report-unused-disable-directives",
+    "lint:fix": "eslint ./tests/**/*.ts --ext ts --report-unused-disable-directives --fix",
     "check-types": "tsc --noEmit",
     "magic": "bun --bun run lint:fix && bun --bun run format && bun --bun run check-types"
   },
