--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,11 @@ jobs:
   ci:
     uses: ./.github/workflows/ci.yml
 
+  e2e:
+    uses: ./.github/workflows/e2e.yml
+
   build-and-publish:
-    needs: ci
+    needs: [ci, e2e]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
