--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,6 +17,7 @@
     "@types/bun": "latest"
   },
   "peerDependencies": {
+    "@types/react": "^19",
     "typescript": "^5",
     "@types/linkify-it": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
