--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mediasoup"
   ],
   "scripts": {
+    "test": "bun run --filter '*' test",
     "format": "bun run --filter '*' format",
     "format:check": "bun run --filter '*' format:check",
     "check-types": "bun run --filter '*' check-types",
