--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,51 +29,25 @@ jobs:
     needs: [ci, e2e]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install Bun
-        uses: oven-sh/setup-bun@v1
+      - name: Build project artifacts
+        uses: ./.github/actions/build-sharkord
         with:
-          bun-version: 1.3.5
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Build app
-        run: |
-          cd apps/server
-          bun run build --bump ${{ inputs.bump }}
+          bump: ${{ inputs.bump }}
 
       - name: Get new version
         id: get_version
-        run: echo "::set-output name=version::$(jq -r .version package.json)"
+        run: echo "version=$(jq -r .version package.json)" >> "$GITHUB_OUTPUT"
 
       - name: Identify user
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Build and publish Docker image
+        uses: ./.github/actions/docker-build-publish
         with:
-          platforms: arm64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
+          docker_username: ${{ secrets.DOCKER_USERNAME }}
+          docker_password: ${{ secrets.DOCKER_PASSWORD }}
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/sharkord:latest
             ${{ secrets.DOCKER_USERNAME }}/sharkord:v${{ steps.get_version.outputs.version }}
