--- a/.github/workflows/develop-image.yml
+++ b/.github/workflows/develop-image.yml
@@ -1,9 +1,6 @@
 name: Publish Develop Image
 
 on:
-  push:
-    branches:
-      - development
   workflow_dispatch:
 
 concurrency:
@@ -11,7 +8,11 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  ci:
+    uses: ./.github/workflows/ci.yml
+
   build-and-publish:
+    needs: [ci]
     runs-on: ubuntu-latest
 
     steps:
