--- a/.github/actions/build-sharkord/action.yml
+++ b/.github/actions/build-sharkord/action.yml
@@ -1,5 +1,5 @@
 name: Build Sharkord
-description: Checkout the repository, install Bun dependencies, and build server artifacts.
+description: Install Bun dependencies and build server artifacts. Requires checkout before use.
 
 inputs:
   bun_version:
@@ -14,9 +14,6 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
     - name: Install Bun
       uses: oven-sh/setup-bun@v1
       with:
