--- a/.github/workflows/develop-image.yml
+++ b/.github/workflows/develop-image.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Build project artifacts
         uses: ./.github/actions/build-sharkord
 
